; ModuleID = '/home/carl/AnghaBench/lz4/ossfuzz/extr_round_trip_stream_fuzzer.c_state_create.c'
source_filename = "/home/carl/AnghaBench/lz4/ossfuzz/extr_round_trip_stream_fuzzer.c_state_create.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i32, i32, i32, i8*, i8*, %struct.TYPE_4__, i32 }
%struct.TYPE_4__ = type { i8*, i64, i64 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @state_create(%struct.TYPE_5__* noalias sret %0, i8* %1, i64 %2, i32 %3) #0 {
  %5 = alloca i8*, align 8
  %6 = alloca i64, align 8
  %7 = alloca i32, align 4
  store i8* %1, i8** %5, align 8
  store i64 %2, i64* %6, align 8
  store i32 %3, i32* %7, align 4
  %8 = load i32, i32* %7, align 4
  %9 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %0, i32 0, i32 6
  store i32 %8, i32* %9, align 8
  %10 = load i8*, i8** %5, align 8
  %11 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %0, i32 0, i32 5
  %12 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %11, i32 0, i32 0
  store i8* %10, i8** %12, align 8
  %13 = load i64, i64* %6, align 8
  %14 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %0, i32 0, i32 5
  %15 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %14, i32 0, i32 1
  store i64 %13, i64* %15, align 8
  %16 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %0, i32 0, i32 5
  %17 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %16, i32 0, i32 2
  store i64 0, i64* %17, align 8
  %18 = load i64, i64* %6, align 8
  %19 = call i32 @LZ4_compressBound(i64 %18)
  %20 = mul nsw i32 2, %19
  %21 = add nsw i32 1024, %20
  %22 = sext i32 %21 to i64
  %23 = call i8* @cursor_create(i64 %22)
  %24 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %0, i32 0, i32 4
  store i8* %23, i8** %24, align 8
  %25 = load i64, i64* %6, align 8
  %26 = call i8* @cursor_create(i64 %25)
  %27 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %0, i32 0, i32 3
  store i8* %26, i8** %27, align 8
  %28 = call i32 (...) @LZ4_createStream()
  %29 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %0, i32 0, i32 1
  store i32 %28, i32* %29, align 4
  %30 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %0, i32 0, i32 1
  %31 = load i32, i32* %30, align 4
  %32 = call i32 @FUZZ_ASSERT(i32 %31)
  %33 = call i32 (...) @LZ4_createStreamHC()
  %34 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %0, i32 0, i32 2
  store i32 %33, i32* %34, align 8
  %35 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %0, i32 0, i32 1
  %36 = load i32, i32* %35, align 4
  %37 = call i32 @FUZZ_ASSERT(i32 %36)
  %38 = call i32 (...) @LZ4_createStreamDecode()
  %39 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %0, i32 0, i32 0
  store i32 %38, i32* %39, align 8
  %40 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %0, i32 0, i32 0
  %41 = load i32, i32* %40, align 8
  %42 = call i32 @FUZZ_ASSERT(i32 %41)
  ret void
}

declare dso_local i8* @cursor_create(i64) #1

declare dso_local i32 @LZ4_compressBound(i64) #1

declare dso_local i32 @LZ4_createStream(...) #1

declare dso_local i32 @FUZZ_ASSERT(i32) #1

declare dso_local i32 @LZ4_createStreamHC(...) #1

declare dso_local i32 @LZ4_createStreamDecode(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
